1.2
* general
- Added German translation by Ralf Eichinger (pixotec)
* elauncher
- Fix for bug "lots of output crash elauncher"
* eworkpanel
- fixed file stream closing in mainmenu.cpp (duh!), thanks to Triples
- closed few memleaks

1.1
* general
- Version number is now uniformly handled throught the docs, via configure
* eworkpanel
- Notification Area a.k.a System Tray support - patch by Elleo + fixes 
for proper unloading and some KDE support
- Battery Status Monitor with support for ACPI and APM
- Quick Launch Bar (area with programmable icons) - "patch" by dzooli
- Time Format (12h vs. 24h) patch by Elleo
- Numerous layout and redraw issues with panel fixed
- Implemented maximize and restore in taskbar context menu
- Logout is now via edewm
- Restore implemented
* ekeyconf
- Add support for custom shortcuts - now you can define any command you 
want and assign a keyboard shortcut (patch to edewm by AW)
- Fix bug 1329447 - ekeyconf not properly grabbing keyboard (making it 
impossible to use already defined shortcuts for something else)
- Some improvements to UI
* etip
- Completely new etip
* emenueditor
- Ability to edit the system menu (you need to be root to do this)
* ecolorconf
- Fix crashes in font dialog (when Xft is used)
* efinder
- Totally new code and look. Now works as should.
* edewm
- Added focus follows mouse.
- Added maximize (netwm) and restore via messages (so can work from eworkpanel)
- Windows are no more out of screen (was this before ?)
- etc.

1.0.4
(NOTE: I would like to thank Google Summer of Code for funding my work on (among else)
EDE 1.0.4. Thanks guys! You rock :) Vedran <vljubovic at smartnet dot ba>)
* general
- improved Russian translations
* econtrol
- re-add ekeyconf (left out by mistake)
* eiconman
- patch by Mike "elleo" - make transparent terminals work
- fix bug with icons getting on top of other windows
* einstaller
- fix bug 949024 "Install new program window smears"